# aws-resource-auto-tagging

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.ps1  deploy.sh  pyproject.toml  template.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: index.html
ref/: EventBridge.yaml  lambda_function.py  template.yml
src/: config.py  error_handler.py  identity.py  lambda_function.py  resource_extractors.py  retry.py  tag_builder.py  tag_printer.py  tag_serializer.py
src/handlers/: ec2.py  other_services.py  rds.py  s3.py
tests/: test_error_handling.py  test_identity.py  test_resource_extraction.py  test_tag_builder.py  test_tag_printer.py  test_tag_serializer.py
